Adding benchmark data

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,10 @@ Logs/
 apps/__pycache__/
 modules/__pycache__/
 *.csv
+!benchmarks/heat_transfer/*.csv
+!benchmarks/hydrodynamics/*.csv
 *.png
+!Scheme.png
 *.ipynb
 *.drawio
 *.pdf
